force-app/main/default/objects/Ticket__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <displayFormat>TN-{0000}</displayFormat>
    <label>Ticket Number</label>
    <type>AutoNumber</type>
</CustomField>