force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>Flight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>